# service/userservice.go
@@ -1,9 +1,13 @@
 package service
 
 import (
+	"fmt"
 	"ginchat/models"
+	"ginchat/utils"
+	"math/rand"
 	"strconv"
 
+	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
 )
 
@@ -39,13 +43,22 @@ func CreateUser(c *gin.Context) {
 	user.Name = c.Query("name")
 	password := c.Query("password")
 	repassword := c.Query("repassword")
+	salt := fmt.Sprintf("%06d", rand.Int31())
+	data := models.FindUserByName(user.Name)
+	if data.Name != "" {
+		c.JSON(-1, gin.H{
+			"message": "该用户名已注册",
+		})
+		return
+	}
 	if password != repassword {
 		c.JSON(200, gin.H{
 			"message": "两次输入的密码不一致",
 		})
 		return
 	}
-	user.PassWord = password
+	user.PassWord = utils.MakePassword(password, salt)
+	user.Salt = salt
 	models.CreateUser(user)
 
 	c.JSON(200, gin.H{
@@ -77,6 +90,8 @@ func DeleteUser(c *gin.Context) {
 // @param id formData string false "id"
 // @param name formData string false "name"
 // @param password formData string false "password"
+// @param phone formData string false "phone"
+// @param email formData string false "email"
 // @Summary     修改用户
 // @Description 修改用户
 // @Success      200 {string} json{"code","message"}
@@ -87,9 +102,58 @@ func UpdateUser(c *gin.Context) {
 	user.ID = uint(id)
 	user.Name = c.PostForm("name")
 	user.PassWord = c.PostForm("password")
+	user.Phone = c.PostForm("phone")
+	user.Email = c.PostForm("email")
+	fmt.Println("update:", user)
+	_, err := govalidator.ValidateStruct(user)
+	if err != nil {
+		fmt.Println(err)
+		c.JSON(200, gin.H{
+			"message": "修改参数不匹配",
+		})
+	}
 	models.UpdateUser(user)
 	c.JSON(200, gin.H{
 		"message": "修改用户成功",
+	})
+
+}
+
+// FindUserByNameAndPwd
+// @Tags        用户模块
+// @Summary     登录
+// @Description 通过用户名和密码登录
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @Success      200 {string} json{"code","message"}
+// @Router      /user/findUserByNameAndPwd [post]
+func FindUserByNameAndPwd(c *gin.Context) {
+	data := models.UserBasic{}
+	name := c.Query("name")
+	password := c.Query("password")
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		c.JSON(200, gin.H{
+			"message": "该用户不存在",
+		})
+		return
+	}
+
+	flag := utils.ValidPassword(password, user.Salt, user.PassWord)
+
+	if !flag {
+		c.JSON(200, gin.H{
+			"message": "密码不正确",
+		})
+		return
+	}
+	pwd := utils.MakePassword(password, user.Salt)
+	data = models.FindUserByNameAndPwd(name, pwd)
+
+	c.JSON(200, gin.H{
+		"code":    0,
+		"message": "success",
+		"data":    data,
 	})
 
 }
